# BRAINS-Research-Skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  STATUS.yml  config.json.example  pyproject.toml  requirements-dev.txt
commands/: brains-research-process.md  brains-research-review.md  brains-research-status.md
docs/plans/: 2026-05-28-plan-1-foundation-and-cataloguer.md  2026-05-29-plan-2-review-command.md
docs/specs/: 2026-05-28-brains-research-skill-design.md  2026-05-29-brains-research-review-design.md
install/: install.cmd  install.ps1  install.sh
references/: bluesky-template.md  edge-cases.md  filename-rules.md  linkedin-template.md  org-abbreviations.md  review-template.md  taxonomy.md
scripts/: __init__.py  apply_renames.py  config.py  extract_all.py  extract_full.py  extract_text.py  review.py  status.py
tests/: conftest.py  test_apply_renames.py  test_config.py  test_extract_all.py  test_extract_full.py  test_extract_text.py  test_review.py  test_status.py
